<resources>
    <string name="app_name">Customer Management System</string>
    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="login_logo">Войти</string>
    <string name="forgot_password">Забыли пароль?</string>
    <string name="or">или</string>
    <string name="singUp">Зарегистрироваться</string>
    <string name="surname">Фамилия</string>
    <string name="registration_logo">Зарегестрироваться</string>
    <string name="name">Имя</string>
    <string name="email">Электронная почта</string>
    <string name="password_confirm">Подтверждение пароля</string>
    <string name="enter_email">Укажите свою почту</string>
    <string name="enter_email_explanation">Введите электронную почту вашего аккаунта, вам будет выслана ссылка на восстановление пароля</string>
    <string name="send_link">Отправьте ссылку</string>
    <string name="clients">Клиенты</string>
    <string name="teacher">Преподаватель</string>
    <string name="start">Старт</string>
    <string name="students">Ученики</string>
    <string name="schedule">Расписание</string>
    <string name="success_password_alert">Запрос на восстановления пароля был успешно принят, проверьте почту</string>
    <string name="registration_alert">Запрос на регистацию был успешно отправлен  супер админу, ожидайте ответа</string>
    <string name="password_alert">Введенные пароли не совпадают</string>
    <string name="change_status">Поменять статус клиента</string>
    <string name="apply">Применить</string>
    <string name="open_profile">Открыть профиль</string>
    <string name="patronymic">Отчество</string>
    <string name="phone">Номер телефона</string>
    <string name="course">Курс</string>
    <string name="status">Статус заявки</string>
    <string name="source_of_application">Источник заявки</string>
    <string name="comment">Комментарий</string>
    <string name="save">Сохранить</string>
    <string name="edit">Редактировать</string>
    <string name="laptop">Ноутбук</string>
    <string name="have_laptop">Есть</string>
    <string name="doesnt_have_laptop">Нету</string>
    <string name="groups">Группы</string>
    <string name="students1">Студенты</string>
    <string name="department">Направление</string>
    <string name="group">Группа</string>
    <string name="time">Время</string>
    <string name="date_pattern">дд-мм-гггг</string>
    <string name="start_date">Дата старта</string>
    <string name="end_date">Дата окончания</string>
    <string name="payment_for_month">Оплата за месяц</string>
    <string name="cabinet">Кабинет</string>
    <string name="archive">Архивировать</string>
    <string name="student_name">Имя студента</string>
    <string name="add_client_status">Добавить клиента или статус</string>
    <string name="add_new_status">Добавить новый статус</string>
    <string name="add_new_client">Добавить клиента</string>
    <string name="status_title">Название</string>
    <string name="new_status">Новая воронка продаж</string>
    <string name="create_new_group">"Хотите создать новую группу? "</string>
    <string name="create_group">Создать группу</string>
    <string name="cancel">Отменить</string>
    <string name="add_student_bottom_sheet">Хотите добавить этого студента в эту группу?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="no_internet">Нет интернет соединения</string>
    <string name="error_loading">Что-то пошло не так</string>
    <string name="choose_date">Выберите дату</string>
    <string name="find">Найти</string>
    <string name="error_occured">Что-то пошло не так. Попробуйте позднее</string>
    <string name="enter_course">Введите направление</string>
    <string name="enter_groupName">Введите название группы</string>
    <string name="enter_teacher">Введите преподавателя группы</string>
    <string name="enter_time">Введите время занятия группы</string>
    <string name="enter_dates">Введите дату старта и окончания группы</string>
    <string name="enter_payment">Введите оплату для группы</string>
    <string name="enter_cabinet">Введите кабинет для группы</string>
    <string name="board_is_created">Новая доска была успешно создана</string>
    <string name="no_groups">Групп нет</string>
    <string-array name="week_days">
        <item>Понедельник</item>
        <item>Вторник</item>
        <item>Среда</item>
        <item>Четверг</item>
        <item>Пятница</item>
        <item>Суббота</item>
        <item>Воскресенье</item>
    </string-array>
    <string name="start_time">Время начала занятия</string>
    <string name="end_time">Время конца занятия</string>
    <string name="new_group">Новая группа успешно создана</string>
    <string name="new_client_creation">Новый клиент успешно создан</string>
    <string name="no_students">В группе нет студентов</string>
    <string name="add_student_successful">Студент успешно добавлен в группу</string>
    <string name="search">Поиск</string>
    <string name="no_student">Список студентов пуст</string>
    <string name="no_schedule">Расписания нет</string>
    <string name="no_clients">Список клиентов пуст</string>
    <string name="enter_lastname">Поле "Фамилия" пустое. Введите фамилию</string>
    <string name="enter_name">Поле "Имя" пустое. Введите фамилию</string>
    <string name="enter_phone">Поле "Номер телефона" пустое. Введите фамилию</string>
    <string name="required_field">*Обязательное поле</string>
</resources>