<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".fragments.FabBottomSheetFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_client_status"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_marginTop="8dp"
            android:layout_marginStart="14dp"/>

        <Button
            android:id="@+id/add_status_btn_btm"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/button_outlined"
            android:text="@string/add_new_status"/>

        <Button
            android:id="@+id/add_client_btn_btm"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="16dp"
            android:text="@string/add_new_client"
            android:background="@drawable/button_outlined"
            android:layout_marginBottom="24dp"/>

    </LinearLayout>
</ScrollView>