<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.NewGroupBottomSheetFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_new_group"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_marginTop="8dp"
            android:layout_marginStart="14dp"/>

        <Button
            android:id="@+id/create_group_btn_btm"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/button_outlined"
            android:text="@string/create_group"/>

        <Button
            android:id="@+id/cancel_group_btm"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="16dp"
            android:text="@string/cancel"
            android:background="@drawable/button_outlined"
            android:layout_marginBottom="24dp"/>

    </LinearLayout>

</androidx.cardview.widget.CardView>