<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".fragments.StudentAddBottomSheetFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <TextView
            android:id="@+id/add_student_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            android:text="@string/add_student_bottom_sheet"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/add_student_tv"
            android:layout_marginTop="32dp"
            android:paddingBottom="8dp">

            <Button
                android:id="@+id/yes_btn_addStudent"
                android:layout_width="0dp"
                android:layout_height="56dp"
                android:layout_marginEnd="48dp"
                android:layout_weight="1"
                android:background="@drawable/button_outlined"
                android:text="@string/yes" />

            <Button
                android:id="@+id/no_btn_addStudent"
                android:layout_width="0dp"
                android:layout_height="56dp"
                android:layout_marginStart="48dp"
                android:layout_weight="1"
                android:background="@drawable/button_outlined"
                android:text="@string/no" />
        </LinearLayout>
    </RelativeLayout>
</androidx.cardview.widget.CardView>